# crossy

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.crossy  Makefile  Makefile.crossy  README.md  suppr.txt
configs/json/: c-ccan.cfg  c-cjson.cfg  c-frozen.cfg  c-jansson.cfg  c-jsmn.cfg  c-json-c.cfg  c-json-parser.cfg  c-jsonh.cfg  c-libjson.cfg  c-poco.cfg.  c-yajl.cfg  cpp-boost.cfg  cpp-jsoncpp.cfg  cpp-nlohmann.cfg  cpp-rapidjson.cfg  cpp-spidermonkey.cfg  cpp-v8.cfg  java-gson.cfg  java-jackson.cfg  py-json.cfg.  py-simplejson.cfg.  rust-serde.cfg
experiments/json/java/java-adapter/: Dockerfile  Makefile  Makefile.java-adapter  README.md  pom.xml
experiments/json/python/: json-main.py  simplejson-main.py
experiments/json/shared-objects/: Makefile  common.h  generic_target.cpp  print-buffer.c  print-buffer.h
experiments/json/shared-objects/libs/serde/serde_adapter/: Cargo.toml
experiments/json/shared-objects/libs/serde/serde_adapter/src/: lib.rs
src/: Makefile  cli.cpp  cli.h  coverage.cpp  coverage.h  input-reader.cpp  input-reader.h  main.cpp  process.c  process.h  runner.cpp  runner.h  shared-library.h  targets.cpp  targets.h  util.cpp  util.h
src/java/: .gitignore  Connector.cpp  Connector.h  Launcher.cpp  Launcher.h  Makefile
src/java/paco-agent/: pom.xml
src/python/: .gitignore  pyproject.toml
src/python/fuzzer_bridge/: __init__.py  fuzzer_bridge.py  shm.py
src/python/fuzzer_bridge/atheris/: __init__.py  counter.py  import_hook.py  instrument_bytecode.py  trace_callbacks.py  utils.py  version_dependent.py
(+101 files in other folders)
