[package]
name = "serde_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.86" # the fuzzing target goes here
libc = "0.2.0" # provides the data types required to interact with C/C++ code
common = { path = "../common" } # provides common status codes & rust_free function

[lib]
crate-type = ["staticlib"]
name = "adapter"
